[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/templates/Base pack/Tiles/sign.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Signal.gd" type="Script" id=2]
[ext_resource path="res://assets/user interface/FlatUI/kenneyUI-blue.tres" type="Theme" id=3]
[ext_resource path="res://assets/user interface/Font/FantasticParty.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/user interface/Font/NineTsukiRegular.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 24 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
extra_spacing_space = -5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="Signal" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )
dialogPath = "res://assets/user interface/Dialogs/Dialog1.json"

[node name="Signal" type="Sprite" parent="."]
scale = Vector2( 1.17918, 1.17918 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.70873, 1.70873 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -28.0
margin_right = 34.0
margin_bottom = 1.0
custom_colors/font_color = Color( 1, 0.796078, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "	LEGGIMI"
align = 1
valign = 1

[node name="Dialog" type="TextEdit" parent="."]
visible = false
margin_left = -337.0
margin_top = -490.0
margin_right = 349.0
margin_bottom = -176.0
theme = ExtResource( 3 )

[node name="Text" type="RichTextLabel" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -9.0
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "  "
text = "  "

[node name="NextDialog" type="RichTextLabel" parent="Dialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_top = -22.0
margin_right = 103.5
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "PREMI INVIO PER ANDARE AVANTI"
text = "PREMI INVIO PER ANDARE AVANTI"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
